[gd_scene load_steps=11 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://modifiers/contrast/modifier_contrast.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/canvas.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/AddModifiers.tscn" type="PackedScene" id=4]
[ext_resource path="res://theme/main_theme.tres" type="Theme" id=6]
[ext_resource path="res://theme/panel_styleboxflat_dark.tres" type="StyleBox" id=7]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.396078, 0.286275, 0.286275, 1 )
border_color = Color( 0.823529, 0.439216, 0.439216, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main_split" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="main area" type="Control" parent="main_split"]
margin_right = 867.0
margin_bottom = 768.0
rect_min_size = Vector2( 149.689, 0 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="main_split/main area"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menubar" type="PanelContainer" parent="main_split/main area/VBoxContainer"]
margin_right = 867.0
margin_bottom = 21.0

[node name="HBoxContainer" type="HBoxContainer" parent="main_split/main area/VBoxContainer/Menubar"]
margin_right = 867.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Load" type="Button" parent="main_split/main area/VBoxContainer/Menubar/HBoxContainer"]
margin_right = 47.0
margin_bottom = 21.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="main_split/main area/VBoxContainer/Menubar/HBoxContainer"]
margin_left = 51.0
margin_right = 98.0
margin_bottom = 21.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="main_split/main area/VBoxContainer/Menubar/HBoxContainer"]
margin_left = 102.0
margin_right = 823.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 7 )

[node name="Filename" type="Label" parent="main_split/main area/VBoxContainer/Menubar/HBoxContainer/PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
size_flags_horizontal = 5
text = "No File Loaded"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="main_split/main area/VBoxContainer/Menubar/HBoxContainer"]
margin_left = 827.0
margin_right = 867.0
margin_bottom = 21.0
rect_min_size = Vector2( 40, 0 )

[node name="RenderIndicator" type="Panel" parent="main_split/main area/VBoxContainer/Menubar/HBoxContainer/Container"]
margin_left = 10.9698
margin_top = 4.522
margin_right = 30.9698
margin_bottom = 24.522
rect_rotation = -134.6
rect_pivot_offset = Vector2( 10, 10 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="main_split/main area/VBoxContainer/Menubar/HBoxContainer/Container/RenderIndicator"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 8.021
margin_bottom = -9.97899
rect_pivot_offset = Vector2( 10, 1 )
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="canvas" parent="main_split/main area/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 21.0
margin_right = 867.0
margin_bottom = 768.0

[node name="Panel" type="Panel" parent="main_split"]
margin_left = 879.0
margin_right = 1280.0
margin_bottom = 768.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="main_split/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddModifiers" parent="main_split/Panel/VBoxContainer" instance=ExtResource( 4 )]

[node name="VSeparator" type="HSeparator" parent="main_split/Panel/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 25.0
margin_right = 381.0
margin_bottom = 45.0
custom_constants/separation = 20

[node name="modifiers_container" type="VBoxContainer" parent="main_split/Panel/VBoxContainer"]
margin_top = 49.0
margin_right = 381.0
margin_bottom = 158.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modifier Contrast" parent="main_split/Panel/VBoxContainer/modifiers_container" instance=ExtResource( 2 )]
anchor_right = 0.0
margin_right = 381.0
margin_bottom = 109.0

[node name="MarginContainer" type="MarginContainer" parent="main_split/Panel/VBoxContainer"]
margin_top = 162.0
margin_right = 381.0
margin_bottom = 252.0
custom_constants/margin_top = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteModifiers" type="Panel" parent="main_split/Panel/VBoxContainer/MarginContainer"]
margin_top = 30.0
margin_right = 381.0
margin_bottom = 90.0
rect_min_size = Vector2( 0, 60 )
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="main_split/Panel/VBoxContainer/MarginContainer/DeleteModifiers"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Delete Modifier (Drag Here)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DropVisualizer" type="Panel" parent="main_split/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -1.7818
margin_bottom = 3.2182
rect_min_size = Vector2( 0, 3 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="open_file_dialog" type="FileDialog" parent="."]
margin_left = 141.776
margin_top = 70.7754
margin_right = 880.776
margin_bottom = 540.775
theme = ExtResource( 6 )
window_title = "Open an Image"
resizable = true
mode_overrides_title = false
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpg", "*.gif" )
show_hidden_files = true
current_dir = "/Users/jacka/Documents/_projects/texrex/texrex"
current_path = "/Users/jacka/Documents/_projects/texrex/texrex/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_file_dialog" type="FileDialog" parent="."]
margin_left = 141.776
margin_top = 70.7754
margin_right = 880.776
margin_bottom = 540.775
window_title = "Save"
resizable = true
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.png" )
show_hidden_files = true
current_dir = "/Users/jacka/Documents/_projects/texrex/texrex"
current_path = "/Users/jacka/Documents/_projects/texrex/texrex/"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="main_split/main area/VBoxContainer/Menubar/HBoxContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="main_split/main area/VBoxContainer/Menubar/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="file_selected" from="open_file_dialog" to="." method="_on_open_image"]
[connection signal="file_selected" from="save_file_dialog" to="." method="_on_save_file_dialog_file_selected"]
